--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
      
         <!-- ... form and buttons for Add item function -->  
-        <div class="d-flex gap-3 mt-2">
+        <div class="d-flex gap-3 mt-2" id="Menu-items-category">
             <!-- ... menu items will be displayed here) -->
         </div>
     </div>
