--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
      
         <!-- ... form and buttons for Add item function -->  
-        <div class="d-flex gap-3 mt-2" id="Menu-item">
+        <div class="d-flex justify-content-center align-item-center gap-3 mt-5 my-5" id="Menu-item">
             <!-- ... menu items will be displayed here) -->
         </div>
     </div>
